# technology-transfer-cell

./: LICENSE  README.md  docker-compose.yml
backend/: .env.example  database.py  main.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/core/: __init__.py  deps.py  security.py
backend/app/models/: __init__.py  agreement.py  deadline.py  disclosure.py  enums.py  innovation_club.py  ipr_violation.py  license.py  mou.py  noticeboard.py  patent.py  project.py  prosecution.py  user.py
backend/app/routers/: __init__.py  agreements.py  auth.py  deadlines.py  disclosures.py  innovation_club.py  ipr_violations.py  licenses.py  mous.py  noticeboard.py  patents.py  projects.py  users.py
bruno/: Get DB Health.bru  Get Root.bru  bruno.json
bruno/TTC-MS/: Untitled 1.bru  bruno.json
bruno/TTC-MS/Agreements/: Create Agreement.bru  List Agreements.bru
bruno/TTC-MS/Auth/: Login.bru  Register.bru
bruno/TTC-MS/IPR/: List Violations.bru  Report Violation.bru
bruno/TTC-MS/InnovationClub/: Apply.bru  List Applications.bru
bruno/TTC-MS/MOUs/: Create MOU.bru  List MOUs.bru
bruno/TTC-MS/Noticeboard/: Create Post.bru  List Posts.bru
bruno/TTC-MS/Projects/: Create Project.bru  Get Project.bru  List Projects.bru  Update Project Status.bru
docs/functions/: overview.md
docs/plan/: NOTE.md  backend.md  database.md  frontend.md
fronend/: index.html  package-lock.json  package.json  vite.config.js
fronend/src/: App.jsx  index.css
fronend/src/api/: agreements.js  auth.js  client.js  deadlines.js  disclosures.js  innovationClub.js  (+6 more)
(+36 files in other folders)
